--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
     <div id="root"></div>
 
     <!-- Compiled and minified JavaScript -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> -->
 
     <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script> -->
     
